Added feature to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment Page</title>
+    <title>Lab 1</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -50,6 +50,7 @@
         <strong>Course:</strong> Components of Software Engineering 1.
         Introduction to Software Engineering
       </p>
+      <p class="info"><strong>Professor:</strong> Kostiantyn Radchenko</p>
       <p class="info"><strong>Student Name:</strong> Abdullah Başal</p>
       <p class="info"><strong>Assignment Topic:</strong> Laboratory Work 1</p>
 
