--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <strong>Course:</strong> Components of Software Engineering 1.
         Introduction to Software Engineering
       </p>
+      <p class="info"><strong>Professor:</strong> Kostiantyn Radchenko</p>
       <p class="info"><strong>Student Name:</strong> Abdullah Başal</p>
       <p class="info"><strong>Assignment Topic:</strong> Laboratory Work 1</p>
-
       <div class="content">
         <h3>Laboratory Work 1: Introduction to Git and Version Control</h3>
         <p>
