--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab 1 work</title>
+    <title>Lab 1</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -55,7 +55,7 @@
       <p class="info"><strong>Assignment Topic:</strong> Laboratory Work 1</p>
       <div class="content">
         <h3>Laboratory Work 1: Introduction to Git and Version Control</h3>
-        <p>
+        <span>
           The primary objective of this laboratory work is to introduce students
           to the concepts and tools of version control, with a focus on Git. By
           the end of this lab, students will understand how to use Git for
@@ -63,11 +63,10 @@
           projects. They will learn how to track changes, create branches, merge
           code, and resolve conflicts in a collaborative development
           environment.
-        </p>
+        </span>
       </div>
-
       <div class="footer">
-        <p>© 2025 All Rights Reserved.</p>
+        <p>© 2025 KPI, Abdullah Basal</p>
       </div>
     </div>
   </body>
